--- a/package.json
+++ b/package.json
@@ -4,15 +4,19 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "build": "parcel build src/index.ts",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "react": "^16.12.0"
+    "react": "^16.12.0",
+    "react-dom": "^16.12.0"
   },
   "devDependencies": {
     "@types/react": "^16.9.19",
-    "parcel": "^1.12.4"
+    "@types/react-dom": "^16.9.5",
+    "parcel": "^1.12.4",
+    "typescript": "^3.7.5"
   }
 }
