--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "autoprefixer": "^9.7.4",
+    "postcss-modules": "^1.5.0",
     "react": "^16.12.0",
     "react-dom": "^16.12.0"
   },
