--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "autoprefixer": "^9.7.4",
     "postcss-modules": "^1.5.0",
     "react": "^16.12.0",
-    "react-dom": "^16.12.0"
+    "react-dom": "^16.12.0",
+    "styled-components": "^5.0.1"
   },
   "devDependencies": {
     "@types/react": "^16.9.19",
