--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "autoprefixer": "^9.7.4",
     "docz": "^2.2.0",
+    "gatsby-plugin-postcss": "^2.1.20",
     "postcss-modules": "^1.5.0",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
@@ -24,7 +25,10 @@
   "devDependencies": {
     "@types/react": "^16.9.19",
     "@types/react-dom": "^16.9.5",
+    "css-loader": "^3.4.2",
+    "docz-plugin-css": "^0.11.0",
     "parcel": "^1.12.4",
+    "style-loader": "^1.1.3",
     "typescript": "^3.7.5"
   }
 }
