--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "uniui",
   "version": "1.0.0",
   "description": "",
-  "main": "dist/index.js",
+  "main": "src/index.ts",
   "scripts": {
     "start": "parcel demo/index.html",
     "build": "parcel build src/index.ts -d lib",
@@ -20,6 +20,7 @@
     "postcss-modules": "^1.5.0",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
+    "react-scripts": "^3.4.0",
     "styled-components": "^5.0.1"
   },
   "devDependencies": {
@@ -28,6 +29,7 @@
     "css-loader": "^3.4.2",
     "docz-plugin-css": "^0.11.0",
     "parcel": "^1.12.4",
+    "postcss-loader": "^3.0.0",
     "style-loader": "^1.1.3",
     "typescript": "^3.7.5"
   }
