--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,13 +3,12 @@
     "outDir": "./lib",
     "target": "es5",
     "module": "commonjs",
-    "noImplicitAny": true,
-    "strictNullChecks": true,
+    "noImplicitAny": false,
+    "strictNullChecks": false,
     "removeComments": true,
-    "declaration": false,
     "sourceMap": true,
     "jsx": "react",
-    "typeRoots": ["index.d.ts", "node_modules/@types"]
+    "typeRoots": ["src/index.d.ts", "node_modules/@types"]
   },
   "include": ["./src/**/*.tsx", "./src/**/*.ts"],
   "exclude": ["node_modules"]
