--- a/.postcssrc
+++ b/.postcssrc
@@ -1,8 +1,8 @@
 {
   "modules": true,
   "plugins": {
-    "autoprefixer": {
-      "grid": true
+    "postcss-modules": {
+      "generateScopedName": "[hash:base64:5]"
     }
   }
 }
