--- a/package.json
+++ b/package.json
@@ -2,10 +2,12 @@
   "name": "uniui",
   "version": "1.0.0",
   "description": "",
-  "main": "src/index.ts",
+  "main": "dist/index.js",
+  "module": "dist/index.module.js",
+  "source": "src/index.ts",
   "scripts": {
     "start": "parcel demo/index.html",
-    "build": "nwb build-react-app",
+    "build": "parcel build src/index.ts",
     "test": "echo \"Error: no test specified\" && exit 1",
     "docz:dev": "docz dev",
     "docz:build": "docz build",
