--- a/package.json
+++ b/package.json
@@ -15,20 +15,21 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@types/styled-components": "^5.0.0",
     "autoprefixer": "^9.7.4",
     "docz": "^2.2.0",
     "gatsby-plugin-postcss": "^2.1.20",
     "postcss-modules": "^1.5.0",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
-    "react-scripts": "^3.4.0"
+    "react-scripts": "^3.4.0",
+    "styled-components": "^5.0.1"
   },
   "devDependencies": {
     "@babel/core": "^7.8.4",
     "@babel/preset-env": "^7.8.4",
     "@types/react": "^16.9.19",
     "@types/react-dom": "^16.9.5",
-    "@types/styled-components": "^5.0.0",
     "babel-loader": "^8.0.6",
     "css-loader": "^3.4.2",
     "docz-plugin-css": "^0.11.0",
@@ -37,7 +38,6 @@
     "postcss-loader": "^3.0.0",
     "precss": "^4.0.0",
     "style-loader": "^1.1.3",
-    "styled-components": "^5.0.1",
     "ts-loader": "^6.2.1",
     "typescript": "^3.7.5",
     "webpack": "^4.41.6",
