--- a/package.json
+++ b/package.json
@@ -5,21 +5,21 @@
   "main": "lib/index.js",
   "scripts": {
     "start": "parcel demo/index.html",
-    "build": "webpack -p; cd src/components/styles && rm *.css.json",
+    "build": "webpack -p",
     "prepublishOnly": "npm run build",
     "test": "echo \"Error: no test specified\" && exit 1",
     "docz:dev": "docz dev",
     "docz:build": "docz build",
     "docz:serve": "docz build && docz serve"
   },
-  "author": "",
+  "author": "Eric Moynihan",
+  "repository": {
+    "url": "https://github.com/ericm/uniui",
+    "type": "git"
+  },
   "license": "ISC",
   "dependencies": {
     "@types/styled-components": "^5.0.0",
-    "autoprefixer": "^9.7.4",
-    "docz": "^2.2.0",
-    "gatsby-plugin-postcss": "^2.1.20",
-    "postcss-modules": "^1.5.0",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-scripts": "^3.4.0",
@@ -31,13 +31,10 @@
     "@types/react": "^16.9.19",
     "@types/react-dom": "^16.9.5",
     "babel-loader": "^8.0.6",
-    "css-loader": "^3.4.2",
+    "docz": "^2.2.0",
     "docz-plugin-css": "^0.11.0",
-    "nwb": "^0.23.0",
     "parcel": "^2.0.0-nightly.119",
     "postcss-loader": "^3.0.0",
-    "precss": "^4.0.0",
-    "style-loader": "^1.1.3",
     "ts-loader": "^6.2.1",
     "typescript": "^3.7.5",
     "webpack": "^4.41.6",
