--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "babel-loader": "^8.0.6",
     "docz": "^2.2.0",
     "docz-plugin-css": "^0.11.0",
+    "gatsby-plugin-styled-components": "^3.1.19",
     "parcel": "^2.0.0-nightly.119",
     "postcss-loader": "^3.0.0",
     "ts-loader": "^6.2.1",
