--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,6 +7,7 @@ services:
       - .docz/dist:/docz
     ports:
       - "8889:9000"
+    working_dir: /docz
     entrypoint:
       - npm
       - run
