--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "docz:dev": "docz dev",
     "docz:build": "docz build",
-    "docz:serve": "docz build && docz serve"
+    "docz:serve": "cd .docz; gatsby serve --prefixPaths / -H 0.0.0.0"
   },
   "author": "Eric Moynihan",
   "repository": {
