--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,8 +10,16 @@
     "declarationMap": true,
     "sourceMap": true,
     "jsx": "react",
-    "typeRoots": ["src/global.d.ts", "node_modules/@types"]
+    "typeRoots": [
+      "src/global.d.ts",
+      "node_modules/@types"
+    ]
   },
-  "include": ["./src/**/*.tsx", "./src/**/*.ts"],
-  "exclude": ["node_modules"]
+  "include": [
+    "./src/**/*.tsx",
+    "./src/**/*.ts"
+  ],
+  "exclude": [
+    "node_modules"
+  ]
 }
