--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "gatsby-plugin-styled-components": "^3.1.19",
     "parcel": "^2.0.0-nightly.119",
     "postcss-loader": "^3.0.0",
+    "svg-url-loader": "^4.0.0",
     "ts-loader": "^6.2.1",
     "typescript": "^3.7.5",
     "webpack": "^4.41.6",
