--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@types/lodash": "^4.14.149",
     "@types/react": "^16.9.19",
     "@types/react-dom": "^16.9.5",
+    "@types/theme-ui": "^0.3.0",
     "babel-loader": "^8.0.6",
     "docz": "^2.2.0",
     "docz-plugin-css": "^0.11.0",
