--- a/docs/theme/package.json
+++ b/docs/theme/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "gatsby-theme-uniuiu",
+  "name": "gatsby-theme-uniui",
   "version": "1.0.0",
   "description": "Theme for http://uniui.moynihan.io",
   "main": "index.jsx",
