--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "build": "webpack -p",
     "prepublishOnly": "npm run build",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "docz:dev": "docz dev",
+    "install:theme": "cp -r docs/theme node_modules/gastby-theme-uniui",
+    "docz:dev": "npm run install:theme; docz dev",
     "docz:build": "docz build",
     "docz:serve": "cd .docz; gatsby serve --prefixPaths / -H 0.0.0.0"
   },
@@ -20,7 +21,6 @@
   "license": "ISC",
   "dependencies": {
     "@types/styled-components": "^5.0.0",
-    "gatsby-theme-uniui": "^1.0.0",
     "lodash": "^4.17.15",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
@@ -37,6 +37,7 @@
     "babel-loader": "^8.0.6",
     "docz": "^2.2.0",
     "docz-plugin-css": "^0.11.0",
+    "gatsby-plugin-compile-es6-packages": "^2.1.0",
     "gatsby-plugin-styled-components": "^3.1.19",
     "parcel": "^2.0.0-nightly.119",
     "postcss-loader": "^3.0.0",
