--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "build": "webpack -p",
     "prepublishOnly": "npm run build",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "install:theme": "cp -r docs/theme node_modules/gastby-theme-uniui",
+    "install:theme": "cp -r docs/theme/** node_modules/gastby-theme-uniui",
     "docz:dev": "npm run install:theme; docz dev",
     "docz:build": "docz build",
     "docz:serve": "cd .docz; gatsby serve --prefixPaths / -H 0.0.0.0"
