--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "gatsby-plugin-styled-components": "^3.1.21",
     "parcel": "^2.0.0-nightly.153",
     "postcss-loader": "^3.0.0",
+    "react-docgen-props-table": "^1.0.3",
     "svg-url-loader": "^4.0.0",
     "ts-loader": "^6.2.1",
     "typescript": "^3.8.3",
